# libspot

./: .clang-format  .gitignore  .travis.yml  404.html  CNAME  Doxyfile  Gemfile  Makefile  README.md  _config.yml  demo.markdown  demo.md  doxyfile  index.html  index.md  mkdocs.yml  setup.py  sitemap.xml
10_overview/: index.html
15_install/: index.html
20_get_started/: index.html
30_parameters/: index.html
50_python/: index.html
51_javascript/: index.html
60_about/: index.html
70_API/: index.html
_includes/: footer.html  head.html  header.html  topbar.html
_layouts/: default.html  home.html  page.html  tuto.html  tuto.html.bak
_pages/: 00_home.md  01_tuto.md  02_python.md  04_download.md  05_about.md  06_about.md
_posts/: 2017-08-31-welcome-to-jekyll.markdown
_sass/: ._base.scss.swp  ._layout.scss.swp  _base.scss  _layout.scss  _layout.scss.save  _syntax-highlighting.scss  base.scss  code.scss  layout.scss  syntax-highlighting.scss  syntax.scss
_site/: 404.html  Gemfile  README.md  about.html  download.html  feed.xml  index.html  index.md  tuto.html
about/: index.html
benchmark/: exp_cf_accuracy.c  exp_cf_speed.c  log_cf_accuracy.c  log_cf_speed.c  p2.c  pow_accuracy_speed.c
build.~1~/: dspot.o.~1~  gpdfit.o.~1~  spot.o.~1~
cpp/: index.html
css/: main.scss
debian/: README  changelog  control  copyright  files  libspot-dev.dirs  libspot-dev.install  libspot-dev.substvars  libspot.install  libspot.substvars  shlibs.local
docs/: 01_home.md  02_get_started.md  10_overview.md  10_philosophy.md  15_install.md  20_get_started.md  30_parameters.md  50_python.md  51_javascript.md  51_typescript.md  52_rust.md  60_about.md  70_API.md  about.md  cpp.md  download.md  go.md  index.html  index.md  python.md
download/: index.html
examples/: basic.c  basic.py
go/: index.html
include/: allocator.h  bounds.h  brent.h  dspot.h  errors.h  estimator.h  gpdfit.h  interface.h  p2.h  peaks.h  spot.h  streammoments.h  streamstats.h  structs.h  tail.h  ubend.h  version.h  xmath.h
lib/: libspot.so.1.0
macros/: main.py
python/: Makefile  README.md  index.html  libspot.i  libspot.py  libspotmodule.c  pylibspot.py  pyproject.toml  setup.py  test.py
python/streamstats/: Makefile  libstream.i  libstream.py  test.py
search/: search_index.json
snap/: snapcraft.yaml
src/: allocator.c  bounds.cpp  brent.c  brent.cpp  dspot.cpp  errors.c  estimator.c  estimator.cpp  gpdfit.cpp  interface.cpp  p2.c  peaks.c  peaks.cpp  spot.c  spot.cpp  streammoments.cpp  streammoments.cpp.~1~  streamstats.cpp  tail.c  ubend.c  ubend.cpp  version.c  xmath.c
test/: allocator_test.c  brent_test.c  peaks_test.c  spot_test.c  test_dspot  test_dspot.cpp  test_example.cpp  test_openmp_perf  test_perf_with_openmp  (+8 more)
(+286 files in other folders)
