[project]
name = "libspot"
authors = [
    { name = "Alban Siffer", email = "31479857+asiffer@users.noreply.github.com" },
]
license = { text = "LGPLv3" }
dynamic = ["version"]
description = "Born to flag outliers (from python)"
readme = "README.md"
requires-python = ">=3.6"
dependencies = ["auditwheel>=5.3.0", "build", "delvewheel>=1.1.4", "setuptools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://asiffer.github.io/libspot"
Repository = "https://github.com/asiffer/libspot.git"
Issues = "https://github.com/asiffer/libspot/issues"


[dependency-groups]
dev = ["types-setuptools"]
testing = ["matplotlib", "numpy"]
